[workspace]

members  = ["crates/*"]
resolver = "3"

[workspace.package]
version      = "0.1.0"
authors      = ["satler <satler@satler.dev>"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/satler-git/harmion"
rust-version = "1.86.0"

[workspace.dependencies]
thiserror = "2.0.12"
tracing   = "0.1.41"

tokio = { version = "1.46.0", features = ["full"] }
