[package]
name                   = "harmion-connect"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

webrtc = "0.13.0"

thiserror = { workspace = true }
tracing   = { workspace = true }

tokio = { workspace = true }

warp    = "0.3"
dashmap = "6.0.1"
