[package]
name                   = "harmion-connect"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = "1.0.140"
rmp-serde  = "1.3.0"

webrtc = "0.13.0"

thiserror = { workspace = true }
tracing   = { workspace = true }

tokio      = { workspace = true }
tokio-util = "0.7.16"

ntex = "2.15.1"

ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
rand          = "0.9.2"
