[package]
name                   = "harmion"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
harmion-connect = { path = "../harmion-connect" }
serde = "1.0.219"
